# SyllabusSlayer

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/student/: next.config.ts  package.json
apps/student/src/app/: layout.tsx  page.tsx
apps/student/src/components/: BattleCanvas.tsx  Combat.tsx  HpBar.tsx  JoinForm.tsx  MapView.tsx  MyGames.tsx  RewardScreen.tsx
apps/student/src/game/: BattleScene.ts  EventBus.ts  PhaserGame.tsx  sfx.ts
apps/student/src/lib/: combatStore.ts  play.ts  (+1 more)
apps/teacher/: .env.local.example  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d159e0c22d3c_baseline_schema.py
backend/app/: main.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  tables.py
backend/app/routers/: health.py  student.py  teacher.py
backend/app/schemas/: __init__.py  game.py
backend/app/services/: __init__.py  analytics.py  assembly.py  chunking.py  combat_tuning.py  embeddings.py  evals.py  generation.py  ingestion.py  meta.py  relics.py  retrieval.py  runmap.py  scoring.py  users.py
backend/scripts/: m1_demo.py
backend/tests/: test_api.py  test_services.py
backend/tests/fixtures/: cell_biology.md
docs/: BUILD-SPEC.md  DEPLOY.md  GAME-FEEL-RESEARCH.md  PROGRESS.md
docs/examples/: cell_biology_game.json
docs/research/: recovered-findings.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: supabaseClient.ts
(+9 files in other folders)
