[project]
name = "syllabusslayer-backend"
version = "0.1.0"
description = "SyllabusSlayer API — FastAPI backend that turns teacher resources into a roguelike quiz-RPG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyjwt[crypto]>=2.9",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "openai>=1.50",
    "tiktoken>=0.8",
    "alembic>=1.13",
    # Postgres / pgvector (used in prod against Supabase; harmless locally)
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]

[project.optional-dependencies]
# Heavy parsing stack (Docling pulls in CPU torch etc.) — install when working on ingestion:
#   uv sync --extra ingestion
ingestion = [
    "docling>=2.0",
    "markitdown[pdf,docx,pptx]>=0.0.1",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
